Move function to src

--- a/composer.json
+++ b/composer.json
@@ -10,5 +10,10 @@
     ],
     "require": {
         "docopt/docopt": "^1.0"
+    },
+    "autoload": {
+        "files": [
+                "src/differ.php"
+        ]
     }
 }
