Add asciinema to README.md

--- a/composer.json
+++ b/composer.json
@@ -15,5 +15,8 @@
         "files": [
                 "src/differ.php"
         ]
-    }
+    },
+        "bin": [
+            "bin/gendiff"
+        ]
 }
