--- a/composer.json
+++ b/composer.json
@@ -12,13 +12,8 @@
         "docopt/docopt": "^1.0"
     },
     "autoload": {
-        "psr-4": {
-                "Differ\\Differ\\": "src",
-                "Differ\\Differ\\Tests\\": "tests"
-      },
         "files": [
-                "src/Differ.php",
-                "tests/DifferTest.php"
+                "src/Differ.php"
         ],
         "bin": [
             "bin/gendiff"
@@ -26,8 +21,5 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5"
-    },
-    "scripts": {
-        "tests": "phpunit tests"
     }
 }
