Add run test-differ

--- a/.github/workflows/differ-check.yml
+++ b/.github/workflows/differ-check.yml
@@ -4,5 +4,11 @@ jobs:
   create:
     runs-on: ubuntu-latest
     steps:
+      - name: Check out repository code
       - uses: actions/checkout@v3
+
+      - name: Install project
       - run: make install
+      
+      - name: Check Differ function
+      - run: make test-differ
