--- a/.github/workflows/differ-check.yml
+++ b/.github/workflows/differ-check.yml
@@ -1,7 +1,10 @@
 name: differ-check
+
 on: push
+
 jobs:
-  create:
+  test:
+    name: test differ
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository code
@@ -12,3 +15,20 @@ jobs:
       
       - name: Check Differ function
         run: make test-differ
+  coverage:
+    needs: [test]
+    name: coverage
+    runs-on: ubuntu-latest
+      - name: Check out repository code
+        uses: actions/checkout@v3
+
+      - name: Install project
+        run: make install
+      
+      - name: Check Differ function
+        run: make test-differ
+      - uses: paambaati/codeclimate-action@v2.2.4
+        env:
+          CC_TEST_REPORTER_ID: 505aa04b771d2ad5e19c875060d8fc5d4746b87d97db502c577e3319d6b6f91c
+        with:
+          coverageCommand: make test-differ
