modified:   .github/workflows/differ-check.yml

--- a/.github/workflows/differ-check.yml
+++ b/.github/workflows/differ-check.yml
@@ -19,6 +19,7 @@ jobs:
     needs: [test]
     name: coverage
     runs-on: ubuntu-latest
+    steps:
       - name: Check out repository code
         uses: actions/checkout@v3
 
