--- a/.github/workflows/differ-check.yml
+++ b/.github/workflows/differ-check.yml
@@ -15,21 +15,12 @@ jobs:
       
       - name: Check Differ function
         run: make test-differ
-  coverage:
-    needs: [test]
-    name: coverage
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check out repository code
-        uses: actions/checkout@v3
-
-      - name: Install project
-        run: make install
       
-      - name: Test Differ function
-        run: make test-differ
+      - name: Run test & publish code coverage
       - uses: paambaati/codeclimate-action@v3.2.0
         env:
           CC_TEST_REPORTER_ID: 505aa04b771d2ad5e19c875060d8fc5d4746b87d97db502c577e3319d6b6f91c
         with:
-          coverageCommand: make test-differ
+          coverageCommand: make test-coverage
+          coverageLocations: ${{github.workplace}}/build/logs/clover.xml
+          debug: true
