--- a/.github/workflows/differ-check.yml
+++ b/.github/workflows/differ-check.yml
@@ -20,6 +20,7 @@ jobs:
         uses: paambaati/codeclimate-action@v3.2.0
         env:
           CC_TEST_REPORTER_ID: 505aa04b771d2ad5e19c875060d8fc5d4746b87d97db502c577e3319d6b6f91c
+          XDEBUG_MODE: coverage
         with:
           coverageCommand: make test-coverage
           coverageLocations: ${{github.workplace}}/build/logs/clover.xml:clover
