--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     "autoload": {
         "files": [
                 "src/Differ.php",
-                "src/Parsers.php"
+                "src/Parsers.php",
+                "src/Formatter.php"
         ],
         "bin": [
             "bin/gendiff"
