Add plain format

--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,10 @@
     "autoload": {
         "files": [
                 "src/Differ.php",
+                "src/Formatters.php",
                 "src/Parsers.php",
-                "src/formatter/Stylish.php"
+                "src/Formatters/Stylish.php",
+                "src/Formatters/Plain.php"
         ],
         "bin": [
             "bin/gendiff"
