--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     ],
     "require": {
         "docopt/docopt": "^1.0",
-        "symfony/yaml": "^5.4"
+        "symfony/yaml": "^5.4",
+        "lstrojny/functional-php": "^1.17"
     },
     "autoload": {
         "files": [
